gcc/testsuite/gm2/pim/pass/settest1.mod
MODULE settest1 ;

TYPE BigSet = SET OF [0..100000];
                                                                                
        
BEGIN
        (******)                                               
END settest1.
