gcc/testsuite/gm2/pim/fail/setunknown.mod
MODULE setunknown ;


VAR
   set: SET OF [0..7] ;
BEGIN
   INCL (set, unknownVariable)
END setunknown.
